--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"lucide-svelte": "^0.554.0",
 		"remixicon": "^4.7.0",
 		"swiper": "^12.0.3",
 		"three": "^0.181.2"
